Updated and fixed typos

--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@ function update_contents()
 Bambi is a collection of tools to generate or process BAM/SAM files using the <a href="https://github.com/samtools/htslib">HTSLib</a> 'C' library.
 </p>
 <p>
-It currently includes <b>i2b</b>, <b>decode</b>, <b>select</b>, and <b>chrsplit</b>.
+It currently includes <b>i2b</b>, <b>decode</b>, <b>select</b>, <b>chrsplit</b>, and <b>read2tags</b>
 <p>
 <p>The Bambi command-line tools are packaged as a single executable and are run as follows:</p>
 <pre>bambi <i>command</i> [options]</pre>
