--- a/manual/command-line-sidebar.html
+++ b/manual/command-line-sidebar.html
@@ -2,3 +2,4 @@
 <li><a href="#decode">decode</a>
 <li><a href="#select">select</a>
 <li><a href="#chrsplit">chrsplit</a>
+<li><a href="#read2tags">read2tags</a>
